# Rust-Lua-Extension

./: Cargo.toml
resources/: dice_roll.lua  hello_name.lua  rock_paper_scissors.lua  scripts.json
src/: libjson.rs  liblua.rs  main.rs
